--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
+    "node-cron": "^3.0.3",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   },
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
