--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.31.2",
     "connection-string": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -21,7 +22,6 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
-    "node-cron": "^3.0.3",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   },
