--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "dev": "nodemon src/index.ts"
+    "dev": "DEBUG=express:* nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "bullmq": "^5.31.2",
     "connection-string": "^4.4.0",
     "cookie-parser": "^1.4.6",
@@ -23,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
     "socket.io": "^4.7.5",
+    "stripe": "^17.5.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
