--- a/backend/package.json
+++ b/backend/package.json
@@ -4,38 +4,40 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "dev": "nodemon src/index.ts"
+    "start": "ts-node --transpile-only src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.19.5",
-    "bcrypt": "^5.1.1",
+    "@types/node": "^22.14.0",
     "body-parser": "^1.20.3",
     "bullmq": "^5.31.2",
     "connection-string": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.30.6",
+    "drizzle-orm": "^0.41.0",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "ioredis": "^5.4.1",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.10.1",
+    "pg": "^8.14.1",
     "socket.io": "^4.7.5",
     "stripe": "^17.5.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.9",
-    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
