--- a/compose.yml
+++ b/compose.yml
@@ -1,27 +1,54 @@
-version: "3.8"
 services:
-  poker-mysql:
-    image: mysql:8.0.35
-    container_name: poker-mysql
+  # # Frontend
+  # poker-frontend:
+  #   container_name: poker-frontend
+  #   build:
+  #     context: ./frontend/
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8086:80"
+  # # Backend
+  # poker-backend:
+  #   container_name: poker-backend
+  #   restart: always
+  #   build:
+  #     context: ./backend/
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8087:4000"
+  #     - "8083:5001"
+  #   entrypoint: ["pnpm", "start"]
+  #   depends_on:
+  #     - poker-mysql
+  #     - poker-redis
+
+  # Database
+  db:
+    image: postgres:17.0
+    container_name: postgres_poker_db
+    restart: always
     ports:
-      - "8081:3306"
+      - "5433:5432"
     environment:
-      MYSQL_ROOT_PASSWORD: L8WMTRFEu85nPwqTWvzRhFa2k2CogE
-      MYSQL_DATABASE: poker
-      MYSQL_USER: poker_admin
-      MYSQL_PASSWORD: s86UaYx7xvQarSUG7qK5SdiQUf5hWh
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_DB=${DB_NAME}
+    env_file:
+      - ./backend/.env
     volumes:
-      - poker-mysql-data:/var/lib/mysql
+      - pgdata:/var/lib/postgresql/data
+
+  # Redis service
   poker-redis:
-    ports:
-      - "8082:6379"
     image: redis:latest
     container_name: poker-redis
+    ports:
+      - "8082:6379"
     environment:
       - REDIS_PASSWORD=cx34CGDhFuz4XfDjWjBXQa3xzsyQWy
     volumes:
       - poker-redis-data:/data
 
 volumes:
-  poker-mysql-data:
+  pgdata:
   poker-redis-data:
