--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node --transpile-only src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "dev": "nodemon src/index.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
